Alignment fixes

--- a/resort-rio/css/main.css
+++ b/resort-rio/css/main.css
@@ -100,6 +100,13 @@ h2.heading.center-line:after {
   align-items: center;
 }
 
+@media (min-width: 992px) {
+  .header-top a {
+    padding-right: 1rem;
+    padding-left: 1rem;
+  }
+}
+
 .header-top a img {
   margin-right: 0.3rem;
 }
@@ -116,6 +123,13 @@ h2.heading.center-line:after {
 .header-top .social-media a {
   padding-right: 0.4rem;
   padding-left: 0.4rem;
+}
+
+@media (min-width: 992px) {
+  .header-top .social-media a {
+    padding-right: 0.3rem;
+    padding-left: 0.3rem;
+  }
 }
 
 .header-top .social-media a img {
@@ -142,16 +156,24 @@ h2.heading.center-line:after {
   text-transform: uppercase;
   color: #fff;
   margin-left: 1.4rem;
+  letter-spacing: 0.5px;
 }
 
 @media (min-width: 1200px) {
   .main-header nav a {
-    margin-left: 1.7rem;
+    margin-left: 1.9rem;
   }
 
-  .main-header nav  a:hover { 
+  .main-header nav a:hover {
     border-bottom: 2px solid #fff;
+  }
 }
+
+@media (min-width: 1200px) {
+  .main-header nav .btn {
+    padding-left: 0.9rem;
+    padding-right: 0.9rem;
+  }
 }
 
 .navbar-toggler-icon {
@@ -524,24 +546,24 @@ footer a:hover {
 
 /* banner */
 .banner .col {
-  height: 230px;
+  height: 202px;
   background-color: #1c1c1c;
 }
 
 @media (min-width: 992px) {
   .banner .col {
-    height: 650px;
+    height: 663px;
   }
 }
 
 .banner video {
   width: 100%;
-  height: 230px;
+  height: 202px;
 }
 
 @media (min-width: 992px) {
   .banner video {
-    height: 650px;
+    height: 663px;
   }
 }
 
@@ -560,9 +582,20 @@ footer a:hover {
   }
 }
 
-@media (min-width: 1200px) {
+.book-direct-offer-wrapper {
+  max-width: 919px;
+  margin: 0 auto;
+}
+
+/* @media (min-width: 1200px) {
   .book-direct-offer {
     padding: 55px;
+  }
+} */
+
+@media (min-width: 992px) {
+  .book-direct-offer .left {
+    max-width: 395px;
   }
 }
 
@@ -570,19 +603,43 @@ footer a:hover {
   margin-bottom: 1.4rem;
 }
 
+@media (max-width: 991px) {
+  .book-direct-offer h2.heading:after {
+    content: "";
+    position: relative;
+    width: 45px;
+    height: 2px;
+    background: #a5a5a5;
+    bottom: 2px;
+    left: 14px;
+    display: inline-block;
+  }
+}
+
 @media (min-width: 992px) {
   .book-direct-offer .left h2 {
-    margin-bottom: 2.5rem;
+    margin-bottom: 3.6rem;
+  }
+
+  .book-direct-offer .left h2.heading:after {
+    bottom: -19px;
   }
 }
 
 .book-direct-offer .left p {
-  margin-bottom: 1.6rem;
+  margin-bottom: 1.4rem;
+}
+
+@media (max-width: 992px) {
+  .book-direct-offer .left p {
+    font-size: 14px;
+    line-height: 1.8;
+  }
 }
 
 @media (min-width: 992px) {
   .book-direct-offer .left p {
-    margin-bottom: 2.5rem;
+    margin-bottom: 2.1rem;
   }
 }
 
@@ -590,6 +647,8 @@ footer a:hover {
   color: #344a71;
   text-decoration: none;
   font-weight: 600;
+  font-size: 14px;
+  letter-spacing: -0.2px;
 }
 
 .book-direct-offer .left .btn-primary {
@@ -601,8 +660,12 @@ footer a:hover {
 
 @media (min-width: 1200px) {
   .book-direct-offer .form {
-    padding-left: 4rem;
+    padding-top: 0.7rem;
   }
+}
+
+.book-direct-offer .form-control-lg {
+  padding: 0.7rem 1rem;
 }
 
 .book-direct-offer label {
@@ -614,7 +677,7 @@ footer a:hover {
 }
 
 .book-direct-offer .mb-4 {
-  margin-bottom: 2.3rem !important;
+  margin-bottom: 2rem !important;
 }
 
 .book-direct-offer .form .form-control,
@@ -688,6 +751,16 @@ footer a:hover {
   font-size: 14px;
   border-radius: 6px;
   color: #fff;
+}
+
+.book-direct-offer .btn.btn-primary {
+  padding: 0.9rem 2.6rem;
+}
+
+@media (min-width: 1200px) {
+  .book-direct-offer .btn.btn-primary {
+    padding: 1rem 2.6rem;
+  }
 }
 
 /* dine and drink */
@@ -768,6 +841,28 @@ footer a:hover {
   background-position: right -2px;
 }
 
+@media (max-width: 991px) {
+  .resort-rio-experiences .title {
+    padding: 35px 0 40px;
+  }
+}
+@media (max-width: 991px) {
+  h2.heading.center-line {
+    margin: 0 0 20px;
+  }
+}
+
+.stay-section .slider-box .card-body h4 {
+  padding: 28px 0;
+  margin: 0 0 10px 0px;
+}
+
+.stay-section .card-body p {
+  font-size: 16px;
+  line-height: 1.4;
+}
+
+
 .resort-rio-experiences h2,
 .resort-rio-experiences h4,
 .resort-rio-experiences p {
@@ -820,17 +915,23 @@ footer a:hover {
   font-size: 40px;
   letter-spacing: 0.02em;
   position: relative;
+  margin-bottom: 46px;
   padding-bottom: 20px;
-  margin-bottom: 50px;
+}
+
+@media (min-width: 992px) {
+  .about-section h1.heading {
+    margin-bottom: 50px;
+  }
 }
 
 .about-section h1.heading:after {
   content: "";
   position: absolute;
+  bottom: -9px;
   width: 65px;
-  height: 1px;
+  height: 2px;
   background: #a5a5a5;
-  bottom: -3px;
   left: calc(50% - 45px);
 }
 
@@ -840,7 +941,7 @@ footer a:hover {
     font-size: 64px;
     line-height: 85px;
     letter-spacing: 0.02em;
-    margin-right: 65px;
+    margin-right: 100px;
   }
 
   .about-section h1.heading::after {
@@ -851,6 +952,7 @@ footer a:hover {
 .about-section h2.heading {
   margin-right: 65px;
 }
+
 .about-section h2.heading.left-line span {
   margin-right: 20px;
 }
@@ -859,8 +961,36 @@ footer a:hover {
   border: 2px solid #344a71;
   position: relative;
   padding: 0 8px 8px 0;
-  margin-top: 15px;
+  margin-top: 55px;
   margin-left: -3px;
+}
+
+@media (min-width: 992px) {
+  .about-section .img-frame {
+    margin-top: 65px;
+  }
+}
+
+.about-section .img-wrapper {
+  margin-top: -15px;
+  margin-left: -3px;
+}
+
+.about-section .img-wrapper img {
+  width: 100%;
+}
+
+@media (min-width: 992px) {
+  .about-section .left img {
+    margin-left: auto;
+    margin-top: -83px;
+    margin-right: 25px;
+  }
+
+  .about-section .left h2.heading {
+    margin-right: 105px;
+    margin-top: 115px;
+  }
 }
 
 @media (min-width: 992px) {
@@ -887,23 +1017,92 @@ footer a:hover {
   left: 0;
 }
 
-@media (min-width: 992px) {
-  .about-section .img-frame {
-    margin-top: 65px;
+/* speciality-section */
+.speciality-section {
+  padding: 0 0 29px;
+}
+
+.speciality-section .title {
+  padding: 37px 0 36px;
+}
+
+.speciality-section h2 {
+  font-family: "Playfair Display", serif;
+  font-size: 30px;
+  font-weight: normal;
+  line-height: 1.4;
+  margin-bottom: 25px;
+  padding: 0 0 20px;
+}
+
+@media (max-width: 991px) {
+  .speciality-section h2.center-line:after {
+    width: 75px;
+    height: 2px;
   }
 }
 
-.about-section .img-wrapper {
-  margin-top: -15px;
-  margin-left: -3px;
+.speciality-section p {
+  font-size: 16px;
+  line-height: 1.4;
 }
 
-.about-section .img-wrapper img {
-  width: 100%;
+.speciality-section .special-wrap:before {
+  height: 29%;
 }
 
-@media (min-width: 992px) {
-  .about-section .left img {
-    margin-left: auto;
+.speciality-section .special-wrap h4 {
+  margin: 26px 0;
+}
+
+.speciality-section .special-wrap p {
+  margin: 0 0 46px;
+}
+
+.speciality-section .special-wrap .btn {
+  padding: 11px 17px;
+  border-color: #344a71;
+  color: #344a71;
+}
+
+.speciality-section .special-wrap {
+  padding: 25px 25px 35px;
+}
+
+/* stay-section */
+
+.stay-section .title {
+  padding: 37px 0 36px;
+}
+
+.stay-section h2 {
+  font-family: "Playfair Display", serif;
+  font-size: 30px;
+  font-weight: normal;
+  line-height: 1.4;
+  margin-bottom: 25px;
+  padding: 0 0 20px;
+}
+
+@media (max-width: 991px) {
+  .stay-section h2.center-line:after {
+    width: 75px;
+    height: 2px;
   }
+}
+
+.stay-section p {
+  font-size: 16px;
+  line-height: 1.4;
+}
+
+.stay-section .slider-box .card-body h4 {
+  padding: 28px 0;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.5);
+  margin: 0 0 10px 0px;
+}
+
+.stay-section .card-body p {
+  font-size: 16px;
+  line-height: 1.4;
 }
